# rag-chatbot

./: .env  README.md  pyproject.toml
app/: client.py  components.py  main.py  routes.py  services.py  util.py  vector_db.py
data/: Coach Paul Johnson Retires from Georgia Tech.txt  Georgia Bulldogs Football Basics.txt  Georgia Southern Football Basics.txt  Georgia State Football Basics.txt  Georgia Tech Football Basics.txt  History of Georgia Football.txt  History of Georgia Southern Football.txt  History of Georgia State Football.txt  History of Georgia Tech Football.txt  History of Kennesaw State Football.txt  History of the Atlantic Coast Confrence (ACC).txt  History of the Conference USA (CUSA).txt  History of the Southeastern Confrence (SEC).txt  History of the Southern Conference (SoCon).txt  History of the Southern Intercollegiate Athletic Association (SIAA).txt  History of the Sun Belt Confrence.txt  Kennesaw State Football Basics.txt  Kennesaw State to Join CUSA and FBS in 2024.txt  List of FBS Champions.txt  List of FCS Champions.txt
